langtools/test/tools/javac/annotations/repeatingAnnotations/BaseAnnoAsContainerAnno.out
BaseAnnoAsContainerAnno.java:13:11: compiler.err.cyclic.annotation.element
1 error
